--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-
+   
 
 </head>
 <body>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
+                        <i class="fab fa-github"></i>
                         <div class="text">GitHub</div>
                         <p>Check Out my GitHub Profile 👀</p>
                     <a href="https://github.com/Anilbhandarkar1">Click Here</a>
